--- a/src/App.module.scss
+++ b/src/App.module.scss
@@ -17,6 +17,56 @@
   width: 100%;
   min-height: 100vh;
 
+  .loader {
+    position: absolute;
+    top: 0;
+    left: 0;
+
+    width: 100%;
+    height: 100vh;
+    background-color: #0A011F;
+    z-index: 1000;
+
+    display: flex;
+    justify-content: center;
+    align-items: center;
+
+    /* Animation combinée */
+    animation: hand 0.5s ease-in-out, slideOut 0.5s cubic-bezier(0.8, 0, 0.43, 0.96) 0.5s forwards;
+}
+
+@keyframes hand {
+    0% {
+        gap: 0;
+    }
+    25% {
+        gap: 1rem;
+    }
+    50% {
+        gap: 0;
+    }
+    75% {
+        gap: 1rem;
+    }
+    100% {
+        gap: 0;
+    }
+}
+
+@keyframes slideOut {
+    0% {
+        transform: translateY(0);
+    }
+    100% {
+        transform: translateY(-100%);
+    }
+}
+
+.hand {
+    width: 100px;
+}
+
+
   .couverture {
     position: relative;
     width: 100%;
