--- a/src/App.module.scss
+++ b/src/App.module.scss
@@ -105,6 +105,7 @@
       flex-direction: column;
       align-items: center;
       color: var(--white);
+      margin-top: 10vh;
 
       h1 {
         font-size: 6vw;
@@ -293,6 +294,10 @@
     z-index: 9;
     padding: 4rem;
 
+    .canvas__pochette{
+      cursor: grab;
+    }
+
 
     h2{
       font-size: 1.5rem;
@@ -302,11 +307,12 @@
       
     }
 
-    a {
+    .button {
       margin-top: 2rem;
       cursor: pointer;
       padding: 0.5rem 2rem;
       border-radius: 500px;
+      font-size: 1rem;
       text-decoration: none;
       color: var(--white);
       transition: background-color 0.15s ease-in-out;
