--- a/src/App.module.scss
+++ b/src/App.module.scss
@@ -150,7 +150,6 @@
       left: 50%;
       transform: translate(-50%, 0%);
       width: 1100px;
-      animation: levitate 5s ease-in-out infinite;
     }
 
     @keyframes levitate {
@@ -164,7 +163,7 @@
     }
 
     .planet__on {
-      animation: levitate 5s ease-in-out infinite, pulse 5s ease-in-out infinite;
+      animation: pulse 5s ease-in-out infinite;
     }
 
     @keyframes pulse {
@@ -177,8 +176,8 @@
       100% {
         opacity: 1;
       }
-    }
-
+    }  
+   
     .accroche {
       font-size: 8rem;
       pointer-events: none;
@@ -191,7 +190,7 @@
       color: var(--white);
       text-shadow: 1px 2px 4px rgb(12 12 12 / 59%);
 
-      span{
+      span.gras{
         font-family: var(--font1);
         font-size: 6rem;
       }
@@ -280,6 +279,27 @@
     justify-content:center;
     align-items: center;
     z-index: 9;
+
+    .rectangle{
+      position: absolute;
+      top: 0%;
+      left: 0%;
+      width: 100%;
+      height: 100%;
+      z-index: 10;
+      background-color: var(--purple);
+    }
+
+    .video{
+      position: absolute;
+      top: 50%;
+      left: 50%;
+      transform: translate(-50%, -50%);
+      width: 100%;
+      height: 100%;
+      object-fit: cover;
+      z-index: 9;
+    }
   }
 
   .cover{
@@ -296,6 +316,13 @@
 
     .canvas__pochette{
       cursor: grab;
+      position: absolute !important;
+      top: 50%;
+      left: 50%;
+      transform: translate(-50%, -50%);
+      width: 100%;
+      height: 100%;
+      z-index: 0;
     }
 
 
@@ -304,6 +331,8 @@
       font-family: var(--font1);
       color: var(--white);
       margin-bottom: 2rem;
+      z-index: 2;
+      
       
     }
 
@@ -320,6 +349,7 @@
       font-weight: 500;
       border: 3px solid var(--pink);
       background-color: var(--pink);
+      z-index: 2;
 
 
       &:hover {
